# openhexa-toolbox

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release-please.yml  release.yml
docker/dhis2/2.38/: docker-compose.yml
docker/dhis2/2.39/: docker-compose.yml
docker/dhis2/2.40/: docker-compose.yml
docker/dhis2/2.41/: docker-compose.yml
docs/: dhis2.md  era5.md  expectations.md  hexa.md  iaso.md  lineage.md
openhexa/toolbox/dhis2/: __init__.py  api.py  dataframe.py  dhis2.py  periods.py  transform.py
openhexa/toolbox/era5/: README.md  __init__.py  aggregate.py  cache.py  cds.py  dhis2weeks.py  extract.py  google.py  models.py  transform.py  utils.py  variables.json
openhexa/toolbox/era5/data/: variables.toml
openhexa/toolbox/expectation/: expectations.py  expectations.yml
openhexa/toolbox/hexa/: __init__.py  api.py  hexa.py
openhexa/toolbox/iaso/: __init__.py  api.py  api_client.py  dataframe.py  iaso.py
openhexa/toolbox/kobo/: __init__.py  api.py  parse.py  utils.py
openhexa/toolbox/lineage/: __init__.py  client.py  event_types.py  open_lineage.md
openhexa/toolbox/open_lineage/: client.py  open_lineage.md  open_lineage.py
recipe/: meta.yaml
tests/: test_lib.py
tests/dhis2/: record_dataframe_responses.ipynb  test_api.py  test_dhis2.py  test_metadata.py  test_periods.py
tests/dhis2/responses/2.37/: authenticate.yaml
tests/dhis2/responses/2.37/analytics/: get_data_element_groups.yaml  get_data_elements.yaml  get_org_unit_group.yaml  get_org_unit_level.yaml
tests/dhis2/responses/2.37/data_value_sets/: get_period.yaml  get_start_end.yaml
tests/dhis2/responses/2.38/: authenticate.yaml
tests/dhis2/responses/2.38/analytics/: get_data_element_groups.yaml  get_data_elements.yaml  get_org_unit_group.yaml  get_org_unit_level.yaml
tests/dhis2/responses/2.38/data_value_sets/: get_period.yaml  get_start_end.yaml
tests/dhis2/responses/2.39/: authenticate.yaml
tests/dhis2/responses/2.39/analytics/: get_data_element_groups.yaml  get_data_elements.yaml  get_org_unit_group.yaml  get_org_unit_level.yaml
tests/dhis2/responses/2.39/data_value_sets/: get_period.yaml  get_start_end.yaml
tests/dhis2/responses/2.40/: authenticate.yaml
tests/dhis2/responses/2.40/analytics/: get_data_element_groups.yaml  get_data_elements.yaml  get_org_unit_group.yaml  get_org_unit_level.yaml
tests/dhis2/responses/2.40/data_value_sets/: get_period.yaml  get_start_end.yaml
tests/era5/: test_cds.py  test_dhis2weeks.py  test_extract.py  test_transform.py
tests/era5/data/: geoms.parquet  sample_202503.grib  sample_202504.grib
tests/expectations/: test_feature_expectations.py  test_unit_expectations.py
tests/hexa/: test_hexa.py
tests/hexa/fixtures/: openhexa_api_fixtures.py
tests/iaso/: record_dataframe_responses.ipynb  test_iaso.py  test_iaso_dataframe.py
tests/iaso/fixtures/: iaso_api_fixtures.py
tests/iaso/responses/dataframe/: extract_submissions.yaml  form_instances.csv  form_versions.json  get_form_metadata.yaml  get_organisation_units.yaml  org_units.csv  org_units.gpkg  replace_labels.yaml
tests/integration/: test_dhis2.py
tests/lineage/: test_lineage.py
tests/lineage/fixtures/: lineage.py
