[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhexa.toolbox"
version = "2.6.0"
description = "A set of tools to acquire & process data from various sources"
authors = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
maintainers = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dateutil",
    "pandas",
    "shapely",
    "geopandas",
    "fiona",
    "polars>=1.0",
    "diskcache",
    "pyjwt",
    "cdsapi >=0.7.3",
    "cads-api-client >=1.4.0",
    "rasterio",
    "cfgrib",
    "xarray",
    "epiweeks",
    "datapi >=0.3.0",
    "openhexa.sdk",
    "humanize",
    "rich"
]

[project.optional-dependencies]
dev = [
    "ruff~=0.8.4",
    "pytest~=8.3.2",
    "build~=1.2.1",
    "pytest-cov~=6.0.0",
    "black~=24.10.0",
    "pre-commit",
    "responses",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "openhexa.toolbox.dhis2",
    "openhexa.toolbox.era5",
    "openhexa.toolbox.hexa",
    "openhexa.toolbox.iaso",
    "openhexa.toolbox.kobo"
]
namespaces = true

[tool.setuptools.package-data]
"openhexa.toolbox.era5" = ["*.json"]

[project.urls]
"Homepage" = "https://github.com/blsq/openhexa-toolbox"
"Bug Tracker" = "https://github.com/blsq/openhexa-toolbox/issues"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests/dhis2", "tests/era5", "tests/hexa", "tests/iaso"]
