[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhexa.toolbox"
version = "2.9.0"
description = "A set of tools to acquire & process data from various sources"
authors = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
maintainers = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dateutil",
    "pandas",
    "shapely",
    "geopandas",
    "fiona",
    "polars>=1.0",
    "diskcache",
    "pyjwt",
    "rasterio",
    "epiweeks",
    "openhexa.sdk",
    "humanize",
    "rich"
]

[project.optional-dependencies]
dev = [
    "ruff~=0.12.12",
    "pytest~=8.4.0",
    "pytest-cov~=7.0.0",
    "build~=1.3.0",
    "black~=25.1.0",
    "pre-commit",
    "responses",
]

test = [
    "ruff~=0.12.12",
    "pytest~=8.4.0",
    "pytest-cov~=7.0.0",
    "responses",
    "cdsapi >=0.7.3",
    "cads-api-client >=1.4.0",
    "cfgrib",
    "xarray",
    "datapi >=0.3.0",
    "rasterio",
    "epiweeks",
    "openlineage-python >=1.33.0"
]

era5 = [
    "cdsapi >=0.7.3",
    "cads-api-client >=1.4.0",
    "cfgrib",
    "xarray",
    "datapi >=0.3.0",
    "rasterio",
    "epiweeks"
]

lineage = [
    "openlineage-python >=1.33.0"
]

all = ["openhexa.toolbox[era5,lineage]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "openhexa.toolbox.dhis2",
    "openhexa.toolbox.era5",
    "openhexa.toolbox.hexa",
    "openhexa.toolbox.iaso",
    "openhexa.toolbox.kobo",
    "openhexa.toolbox.lineage",
]
namespaces = true

[tool.setuptools.package-data]
"openhexa.toolbox.era5" = ["*.json"]

[project.urls]
"Homepage" = "https://github.com/blsq/openhexa-toolbox"
"Bug Tracker" = "https://github.com/blsq/openhexa-toolbox/issues"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests/dhis2", "tests/era5", "tests/hexa", "tests/iaso"]
