[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhexa.toolbox"
version = "2.10.0"
description = "A set of tools to acquire & process data from various sources"
authors = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
maintainers = [{ name = "Bluesquare", email = "dev@bluesquarehub.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dateutil",
    "pandas",
    "shapely",
    "geopandas",
    "fiona",
    "polars>=1.0",
    "diskcache",
    "pyjwt",
    "rasterio",
    "epiweeks",
    "openhexa.sdk",
    "humanize",
    "rich",
    "psycopg>=3.2.11",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.12.12",
    "pytest~=8.4.0",
    "pytest-cov~=7.0.0",
    "build~=1.3.0",
    "black~=25.1.0",
    "pre-commit",
    "responses",
]

test = [
    "ruff~=0.12.12",
    "pytest~=8.4.0",
    "pytest-cov~=7.0.0",
    "responses",
    "xarray",
    "rasterio",
    "epiweeks",
    "openlineage-python >=1.33.0",
    "ecmwf-datastores-client>=0.4.0",
    "pyarrow>=18.1.0",
    "xarray>=2025.9.1",
    "zarr>=3.1.3",
]

era5 = [
    "cfgrib>=0.9.15.1",
    "ecmwf-datastores-client>=0.4.0",
    "pyarrow>=21.0.0",
    "xarray>=2025.9.1",
    "zarr>=3.1.3",
    "dask",
]

lineage = [
    "openlineage-python >=1.33.0"
]

all = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openhexa.toolbox.*"]
namespaces = true

[tool.setuptools.package-data]
"openhexa.toolbox.era5" = ["data/*.json", "data/*.toml"]

[project.urls]
"Homepage" = "https://github.com/blsq/openhexa-toolbox"
"Bug Tracker" = "https://github.com/blsq/openhexa-toolbox/issues"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests/dhis2", "tests/era5", "tests/hexa", "tests/iaso"]
